<resources>
    <string name="app_name">Controlled Burn</string>
    <string name="graph_goal_weight">Goal</string>
    <string-array name="goal_array">
        <item>Lose weight</item>
        <item>Maintain</item>
        <item>Gain weight</item>
    </string-array>
    <string-array name="unit_array">
        <item>@string/lbs</item>
        <item>@string/kgs</item>
    </string-array>
    <string-array name="time_array">
        <item>@string/ten_days</item>
        <item>@string/month</item>
        <item>@string/six_months</item>
        <item>@string/year</item>
        <item>@string/two_years</item>
        <item>@string/max</item>
    </string-array>
    <string-array name="weight_array">
        <item>@string/est_weight</item>
        <item>@string/scale_weight</item>
    </string-array>
    <string-array name="tracking_array">
        <item>@string/internal_tracking</item>
        <item>@string/external_tracking</item>
    </string-array>
    <string name="internal_tracking">Meals + calories</string>
    <string name="external_tracking">Just calories</string>
    <string name="ten_days">10 days</string>
    <string name="month">Month</string>
    <string name="six_months">Six months</string>
    <string name="year">Year</string>
    <string name="two_years">Two years</string>
    <string name="max">Max</string>
    <string name="minus">&#8722;</string>
    <string name="plus">&#43;</string>
    <string name="equals">&#61;</string>
    <string name="done">Done</string>
    <string name="age">Age:</string>
    <string name="weight">Weight</string>
    <string name="goal">Goal weight</string>
    <string name="lbs">lb</string>
    <string name="kgs">kg</string>
    <string name="cal">cal</string>
    <string name="min">min</string>
    <string name="base_calories">Goal</string>
    <string name="exercise">Exercise</string>
    <string name="food">Food</string>
    <string name="remaining">Remaining</string>
    <string name="weight_units">Weight units:</string>
    <string name="got_it">Got it</string>
    <string name="welcome">Welcome!</string>
    <string name="other_exercise">Other exercise</string>
    <string name="small_snack">Small snacks</string>
    <string name="beverages">Beverages</string>
    <string name="large_meals">Large meals</string>
    <string name="reg_meals">Regular meals</string>
    <string name="small_meals">Small meals</string>
    <string name="reg_snacks">Large snacks</string>
    <string name="other_food">Other food</string>
    <string name="question_1">Is this medical advice?</string>
    <string name="answer_1">No! Controlled Burn is not a replacement for a medical professional and does not provide medical advice. It is meant to be used with proper medical supervision. Discuss your goals and use of Controlled Burn regularly with your physician. Please don\'t sue me.</string>
    <string name="question_2">What does Controlled Burn do?</string>
    <string name="answer_2">Controlled Burn uses the data that you provide to estimate the number of calories that you burn every day and the number of calories in each food category. These estimates improve over time with consistent tracking.</string>
    <string name="question_3">Why is the estimated weight different from what the scale tells me?</string>
    <string name="answer_3">Your weight can fluctuate quite a bit from day to day and even hour to hour based on hydration, food intake, and bodily functions. Controlled Burn\'s estimate cuts through the noise so you can keep track of what really matters.</string>
    <string name="question_4">How do I decide how to log my food?</string>
    <string name="answer_4">Do whatever makes sense to you. Say you had a burger, fries and a shake. One person might call that a large meal. Another person might say that the burger is a small meal, the fries are a regular snack and the shake is two beverages. Another person might track another way. Don\'t worry about getting the \"right\" answer. Over time, Controlled Burn will figure out what you mean.</string>
    <string name="question_5">How do I choose a goal weight?</string>
    <string name="answer_5">Ask your physician to help you choose a weight that will put you at a healthy BMI. </string>
    <string name="question_6">Do I need to record exercise?</string>
    <string name="answer_6">Not necessarily, but it is recommended if your workouts typically last more than 30 minutes.</string>
    <string name="question_7">How often do I need to weigh myself?</string>
    <string name="answer_7">First thing each morning would be best, but as little as three times a week would be okay.</string>
    <string name="question_8">Do I need to log every day?</string>
    <string name="answer_8">Nope. The algorithms know exactly what to do when you take a day off, so don\'t worry about it. Not logging isn\'t going to erase those two orders of nachos though!</string>
    <string name="question_9">What do I do if I forgot to log part of a day?</string>
    <string name="answer_9">Either guess what you ate the rest of the day or set all of the numbers back to zero and it\'ll pretend like you just took the day off.</string>
   <string name="question_10">How long does it take Controlled Burn to figure me out?</string>
    <string name="answer_10">The estimates improve rapidly for about a month and more slowly after that, but there will always be some error. Give Controlled Burn up to a month to learn before trusting it very much.</string>
    <string name="question_11">Can I use another app to estimate my food/exercise calories?</string>
    <string name="answer_11">Sure. Just record the numbers from the other app as other food calories and/or other exercise calories. If you don\'t want to see the food categories, select \"Just calories\" for \"Tracking mode\" in settings.</string>
    <string name="question_12">How is my data backed up?</string>
    <string name="answer_12">Controlled Burn uses Android\'s auto backup feature. This feature may be enabled or disabled by navigating to \"Backup and Reset\" under system settings. If enabled, your data will typically be backed up once per day while your phone is charging and connected to wifi. Your data will be restored in the case of a reinstall or when you switch to a new phone. You can verify that your data is being backed up by navigating to \"backups\" in the Google Drive app. </string>
    <string name="question_13">How can I send comments or feedback?</string>
    <string name="answer_13">For comments or bug reports, send me an email at controlledburnapp@gmail.com.</string>
    <string name="question_14">What do I do if the backup doesn\'t show up under Google Drive?</string>
    <string name="answer_14">Make sure that you have enabled automatic backup and restore in your device settings under \"Backup and Reset.\" Try restarting your device and ensuring that it is connected to wifi before charging it overnight.</string>
    <string name="today">Today</string>
    <string name="yes">Reset</string>
    <string name="no">Cancel</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="scale_weight">Scale weight</string>
    <string name="est_weight">Estimated weight</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="history">Progress</string>
    <string name="base_energy_expenditure">Base calorie expenditure</string>
    <string name="exercise_cal_min">Exercise calories/minute</string>
    <string name="small_snack_cal">Small snack calories</string>
    <string name="large_snack_cal">Large snack calories</string>
    <string name="small_meal_cal">Small meal calories</string>
    <string name="regular_meal_cal">Regular meal calories</string>
    <string name="large_meal_cal">Large meal calories</string>
    <string name="beverage_cal">Beverage calories</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_warning">Just for the curious. These numbers will often be different from the true values even when the app is working properly. Ignore them when deciding how to log food.</string>
    <string name="welcome_message">Over time, Controlled Burn figures out how you think about food and how your body uses energy. \n\nThe way that you track food will be unique to you. That\'s okay! \n\n<b>Tip:</b> If you\'re having trouble deciding between two categories, log the smaller one plus a small snack. </string>
    <string name="tracking_mode">Tracking mode</string>
    <string name="graph_today">Today</string>
    <string name="graph_tomorrow">Tomorrow</string>
    <string name="reset_warning">Careful! This will remove all of your recorded data and cannot be undone. Would you like to continue?</string>
    <string name="reset_recorded_data">Reset recorded data</string>
    <string name="support_us">Support Us</string>
    <string name="goal_weight_hint">goal</string>
    <string name="youve_lost">You\'ve lost </string>
    <string name="youve_gained">You\'ve gained </string>
    <string name="ive_lost">I\'ve lost</string>
    <string name="ive_gained">I\'ve gained</string>
    <string name="with_cb">with Controlled Burn!</string>
    <string name="cb_url">http://play.google.com/store/apps/details?id=com.controlledBurn</string>
    <string name="test">test!</string>
</resources>
