<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/quaternary_material_light">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/smallVerticalTextPadding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equation_goal"
            android:text="@string/base_calories"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeSubheading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_gravity="center"
            android:text="@string/base_calories"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeCaption"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus"
        android:layout_gravity="center"
        android:textSize="@dimen/textSizeSubheading"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/smallVerticalTextPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:id="@+id/equation_food"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeSubheading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:id="@+id/textView8"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeCaption"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeSubheading"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/smallVerticalTextPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:id="@+id/equation_exercise"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeSubheading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeCaption"/>



    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeSubheading"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/smallVerticalTextPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:id="@+id/equation_remaining"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeSubheading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:id="@+id/textView10"
            android:layout_gravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="@dimen/textSizeCaption"/>


    </LinearLayout>


</LinearLayout>

