<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quaternary_material_light">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/primary_material_light"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quaternary_material_light"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="@dimen/firstLeftTab"
        android:paddingStart="@dimen/secondLeftTab"
        android:paddingTop="@dimen/suggestedVerticalTextPadding"
        android:paddingBottom="@dimen/suggestedVerticalTextPadding">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textSizeTextView"
            android:text="@string/tracking_mode"
            android:layout_alignParentStart="true"/>



        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/tracking_spinner"
            android:popupBackground="@color/quaternary_material_light"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            />

    </RelativeLayout>

    <include layout="@layout/divider"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quaternary_material_light"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="@dimen/firstLeftTab"
        android:paddingStart="@dimen/secondLeftTab"
        android:paddingTop="@dimen/suggestedVerticalTextPadding"
        android:paddingBottom="@dimen/suggestedVerticalTextPadding">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textSizeTextView"
            android:text="Weight unit"
            android:layout_alignParentStart="true"/>



        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/weight_unit_spinner"
            android:popupBackground="@color/quaternary_material_light"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            />

    </RelativeLayout>

    <include layout="@layout/divider"/>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quaternary_material_light"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="@dimen/firstLeftTab"
        android:paddingStart="@dimen/secondLeftTab"
        android:paddingTop="@dimen/suggestedVerticalTextPadding"
        android:paddingBottom="@dimen/suggestedVerticalTextPadding">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textSizeTextView"
            android:text="@string/goal"
            android:layout_alignParentStart="true"
            android:id="@+id/goal_text"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:id="@+id/goal_weight_accept"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:layout_marginEnd="@dimen/horizontalImageButtonMargin"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/goal_edit_text"
            android:popupBackground="@color/quaternary_material_light"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_toStartOf="@+id/goal_weight_accept"
            android:textAlignment="textEnd"
            android:inputType="numberDecimal"
            android:minEms="5"
            android:background="@color/quaternary_material_light"
            android:hint="@string/goal_weight_hint"
            android:layout_marginEnd="@dimen/firstLeftTab"
            android:imeOptions="actionDone"
            android:textSize="@dimen/textSizeSubheading"
            />



    </RelativeLayout>


    <include layout="@layout/divider"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="@dimen/textSizeTextView"
        android:text="@string/reset_recorded_data"
        android:layout_alignParentStart="true"
        android:paddingEnd="@dimen/firstLeftTab"
        android:paddingStart="@dimen/secondLeftTab"
        android:paddingTop="@dimen/suggestedVerticalTextPadding"
        android:paddingBottom="@dimen/suggestedVerticalTextPadding"
        android:id="@+id/reset_button"
        android:clickable="true"/>



</LinearLayout>